classDiagram
    %% Domain Model

    %% Persistence Interfaces & Implementations
    class NetSerializer {
        + serialize(PetriNetModel)
    }
    class PNMLSerializer {
        + serialize(PetriNetModel)
    }

    class NetParser {
        + parse(path) PetriNetModel
    }
    class PNMLParser {
        + parse(path) PetriNetModel
    }

    NetSerializer <|.. PNMLSerializer
    NetParser     <|.. PNMLParser
